[add] Check My IP, Settings -> HTTP Server
[add] Developer authentication, allowing add-ons to use their own access tokens
    - see youtube_authentication.py, youtube_registration.py, youtube_requests.py, and youtube_resolver.py
[upd] YouTube UTC datetimes to local timezone |contrib: pannal|
[upd] Localize API key errors, provide a more descriptive notification
[fix] My Channel videos (Error 403)
[fix] allow fallback to dash, when using Audio only
[fix] Signature function not found error for some users
[fix] Context Menu -> More -> Related Videos w/ Kodi 18
[fix] Sign In/Sign Out causing crash with Kodi 18 nightlies
[fix] Channel 'mine' caching
[fix] Time changing when playing generated dash
[lang] es_es strings |contrib: roliverosc|
[lang] el_gr strings |contrib: twilight0|
[lang] nl_nl strings |contrib: Markman-B|

6.0.2
[fix] incorrectly raised 'Proxy is not running' error

6.0.1
[fix] notification encoding

6.0.0
[add] Python 3 compat.
[add] Settings -> Maintenance -> Delete temporary files
[add] Settings -> General -> Rate video after watching
[add] Settings -> API -> Enable API configuration page
    - when enabled, visit http://<ipaddress>:<port>/api to configure API keys from a web browser
    - port is configured in Settings - HTTP Server - Port
[chg] Storing personal api keys in api_keys.json
[chg] Storing login tokens in access_manager.json
[add] youtube_registration module, register developer keys and use them by appending an addon_id=<addon_id> parameter to youtube add-on plugin urls
[add] screensaver=true parameter to /play route - no suggested videos, no post play events, don't ask for quality
[add] play route for channel live streams
    - plugin://plugin.video.youtube/play/?channel_id=UCLA_DiR1FfKNvjuUpBHmylQ&live=1
[add] Purchases
    - requires Kodi 18
    - requires inputstream.adaptive >= 2.2.12
    - if a purchase fails after 10 seconds
        - provide a debug log
        - set InputStream Adaptive -> Settings -> Stream selection -> manual